Can run behind proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
       - SSL_ENABLED=true
       # [REQUIRED if SSL_ENABLED] Email for SSL
       - SSL_CONTACT_EMAIL=YourEmail@gmail.com
+      # BEHIND PROXY
+      - BEHIND_PROXY=true
+      - BEHIND_PROXY_TRUSTED_IPS=localhost,10.10.10.1
+
       # Maximum XSS callback payload size
       # This includes the webpage screenshot, DOM HTML,
       # page text, and other metadata. Note that if the
